2005-06-17  Kazuhiko  <kazuhiko@fdiary.net>
	* misc/plugin/attach/attach.rb (attach_download): display an error
	message if the file does not exist. use
	'export_plugin_methods' (by Yazawa).
	* misc/plugin/attach/attach.cgi: use Hiki::Utils::redirect (by
	Yazawa).

2005-06-16  Kouhei Yanagita <sugi@dream.big.or.jp>
	* hiki/command.rb (cmd_login), messages/en.rb, messages/fr.rb,
	messages/it.rb, messages/ja.rb,
	template/login.html (msg_login_failure): show a message when login
	failure.

2005-06-16  Kazuhiko  <kazuhiko@fdiary.net>
	* hiki/db/flatfile.rb (save): raise an exception with informations
	about the incompatibility.
	* hiki/plugin.rb (load, load_backup): add methods which are
	aliases of HikiDB#load and HikiDB#load_backup.

	* hiki/db/flatfile.rb (store): add 'preserve' option to keep
	modified time.

	* hiki/repos/svn.rb (revisions): use Time#strftime instead of
	Time#to_s since Time#to_s may contains SJIS characters in mingw32
	ruby (suggest by Atsushi Koga).
	* view/template.html: ditto.

	* hiki/command.rb (cmd_edit): support editing with a specified
	revision.
	* misc/plugin/history.rb: add a link to revert to a specified
	revision.

	* hiki/repos/cvs.rb (get_revision, revisions): add new methods.
	* hiki/repos/svn.rb (get_revision, revisions): ditto.
	* misc/plugin/history.rb: follow the changes.

	* hiki/plugin.rb (Hiki::Plugin): add new instance variable @data.
	* hiki/command.rb (generate_page): merge @plugin.data to control
	parameters from plugins.

	* hiki/repos/svn.rb: support Windows (suggested by Atsushi Koga).

	* hiki/util.rb (Util::get_common_data): load a cache of 'SideMenu'
	if exists (by Yazawa).

	* style/default/html_formatter.rb (HTMLFormatter_default::make_link):
	fix a bug that loses wikinames in the table of contents.

2005-06-15  Kazuhiko  <kazuhiko@fdiary.net>
	* misc/plugin/attach/attach.rb: use @options['attach.cgi_name']
	to change the filename of 'attach.cgi' (by Koichiro Ohba).
