@@ -1,0 +1,23 @@
+<!DOCTYPE html
+    PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
+    "http://www.w3.org/TR/html4/loose.dtd">
+<html lang="<%= @contents[:lang] %>">
+<head>
+<%= @contents[:header] %>
+</head>
+
+<body>
+<a name="top"> </a>
+<div class="<%= @contents[:view_style] %>">
+  <div class="adminmenu"><%= @contents[:tools] %></div>
+  <h1 class="header"><%= @contents[:view_title] %></h1>
+  <div>Please back to <a href="<%= @contents[:cgi_name] %>"><%= @contents[:frontpage] %></a>.</div>
+</div>
+<% if @contents[:sidebar_class] %>
+<div class="<%= @contents[:sidebar_class] %>">
+  <%= @contents[:sidebar] %>
+</div>
+<% end %>
+<div class="footer"><%= @contents[:footer] %></div>
+</body>
+</html>
